# AIagent

./: .env  agent.db  main.py  pyproject.toml
model/: db.py
python_realtime_asr/: const.py  realtime_asr.py
routers/: default.txt  demo.py  mobile.py  web.py
static/: index.html
static/assets/: index-2649dba4.js  index-b30ff9b0.css  index-f337dba2.js
utils/: hot_spot.py  json_handle.py  request_pa.py  save_pa_token.py
